# qdrant_rag

./: .gitignore  README.md  pyproject.toml
data/startups/: semantic_search_owndata.py  startups_demo.md
data/zenn_data/: 1000人のエリートを育てた_爆伸びマネジメント.md  20歳の自分に受けさせたい文章講義.md  Amp_It_Up_最高を超える.md  GitLabに学ぶ_世界最先端のリモート組織のつくりかた.md  zero_to_one.md  なぜ「戦略」で差がつくのか.md  はじめての課長の教科書.md  エッセンシャル思考.md  シリコンバレー式 最強の育て方 ―人材マネジメントの新しい常識 1on1ミーティング―.md  シリコンバレー最重要思想家ナヴァル・ラヴィカント.md  プレイングマネジャー必須スキル 部下が勝手に活躍する魔法の質問_育成する原理・視点・行動がわかる.md  モチベーション革命_稼ぐために働きたくない世代の解体書.md  世界一流エンジニアの思考法.md  人を選ぶ技術.md  優れたリーダーはなぜ傾聴力を磨くのか.md  勝負論_ウメハラの流儀.md  否定しない習慣.md  急成長を導くマネージャーの型.md  書く習慣〜自分と人生が変わるいちばん大切な文章力〜.md  武器としての交渉思考.md  言語化の魔力_言葉にすれば「悩み」は消える.md
docs/: semantic_search_owndata.md  tutorial_1_emantic_search.md  tutorial_2_neural_search.md
shell/: start_qdrant.sh
src/: semantic_search_owndata.py  semantic_tutorial_data.py  tutorial_1_semantic_search.py  tutorial_1_semantic_search_owndata.py  tutorial_2_neural_search_api.py  tutorial_2_neural_search_make_data.py  tutorial_2_neural_searcher.py
